# object_manipulation

./: .gitignore  CMakeLists.txt  stack.xml
bayesian_grasp_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
bayesian_grasp_planner/launch/: bayesian_grasp_planner_node.launch  bayesian_grasp_planner_node_prereqs.launch  both.launch
bayesian_grasp_planner/nodes/: bayesian_grasp_planner_node.cpp  regression_grasp_evaluator_node.cpp
bayesian_grasp_planner/src/: bayesian_grasp_planner.cpp  grasp_evaluator.cpp  grasp_generator.cpp
compressed_pointcloud_transport/: CMakeLists.txt  TODO  mainpage.dox  manifest.xml
compressed_pointcloud_transport/launch/: compress.launch  decompress.launch
compressed_pointcloud_transport/src/: compressor.cpp  decompressor.cpp
current_state_validator/: manifest.xml
current_state_validator/launch/: current_state_validator.launch
household_objects_database/nodes/: objects_database_node.cpp
object_manipulation_msgs/action/: Place.action
object_manipulator/src/: object_manipulator.cpp
probabilistic_grasp_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
probabilistic_grasp_planner/include/probabilistic_grasp_planner/: conditional_probability_distributions.h  distribution_evaluator.h  forward_decls.h  grasp_regression_evaluator.h  grasp_retriever.h  grasp_success_probability_computer.h  probabilistic_grasp_planner.h  probabilistic_planner_tools.h  recognition_probability_computer.h
probabilistic_grasp_planner/launch/: both.launch  probabilistic_grasp_planner_node.launch  probabilistic_grasp_planner_node_prereqs.launch
probabilistic_grasp_planner/nodes/: probabilistic_grasp_planner_node.cpp
probabilistic_grasp_planner/src/: conditional_probability_distributions.cpp  distribution_evaluator.cpp  grasp_regression_evaluator.cpp  grasp_retriever.cpp  grasp_success_probability_computer.cpp  probabilistic_grasp_planner.cpp  recognition_probability_computer.cpp
probabilistic_grasp_planner/test/: distribution_tests.cpp  probability_computer_tests.cpp
static_transform_broadcaster/: CMakeLists.txt  mainpage.dox  manifest.xml
(+16 files in other folders)
